Change assertion to use getFirst() method